[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdc"
dynamic = ["version"]
description = "A Python CLI tool for Dhaka Power Distribution Company Limited (DPDC) prepaid electricity accounts"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
maintainers = [
    {name = "Md Minhazul Haque", email = "mdminhazulhaque@gmail.com"}
]
keywords = ["dpdc", "electricity", "prepaid", "bangladesh", "utility", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Utilities",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
    "click>=8.0.0",
    "tabulate>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/mdminhazulhaque/python-dpdc"
Repository = "https://github.com/mdminhazulhaque/python-dpdc"
"Bug Reports" = "https://github.com/mdminhazulhaque/python-dpdc/issues"
"Source Code" = "https://github.com/mdminhazulhaque/python-dpdc"

[project.scripts]
dpdc-cli = "dpdc.main:app"

[tool.setuptools]
packages = ["dpdc"]

[tool.setuptools.dynamic]
version = {attr = "dpdc.__version__"}
